v.2..240131 Fix Contra-prova; minor improvs